Feature fluentbit secret lib (#98)
* add _secret to lib

* change fb secret sorce

* helm dep update

* refactor fluentbit-standalone secret

* add secretTpl

* refactor pg fb secret

* helm dep update

* add secret name

* fix ''

* helm dep update

* add {- -}

* fix name

* fix type to string

* helm dep update

* fix type to string

* helm dep update

* fix secret

* helm dep update

* fix tmpl

* helm dep update

* test delete trim

* helm dep update

* Revert "test delete trim"

This reverts commit 2c157a81ad05268bc1fa5ef874210208b1db3cce.

* test increase nindent

* helm dep update

* fix f-b secret tmpl

* helm dep update

* return config name

* fix name

* set namespace

* helm dep update

* delete if enabled

* fix charts

---------

Co-authored-by: St.Dmitry <hector@defigang.dev>

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
@@ -1,5 +1,9 @@
-{{- range $name, $secret := .Values.secrets }}
+{{- $secret := dict "name" ( printf "%s-%s" (include "fluentbit.fullname" $ ) "config" ) }}
 {{- $labels := include "fluentbit.labels" $ | fromYaml }}
-{{- $secret = set $secret "name" ( printf "%s-%s" (include "fluentbit.fullname" $ )  $name ) }}
-{{- include "core.secret" (list $ $labels $secret ) }}
-{{- end }}
+{{- $secret = set $secret "parsers" .Values.parsers }}
+{{- $secret = set $secret "service" .Values.configs }}
+{{- $secret = set $secret "inputs" .Values.inputs }}
+{{- $secret = set $secret "filters" .Values.filters }}
+{{- $secret = set $secret "outputs" .Values.outputs }}
+{{- $secret = set $secret "annotations" .Values.annotations }}
+{{- include "fluentbit.secret" (list $ $labels $secret ) }}
