--- a/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
@@ -5,6 +5,6 @@ name: postgres-cluster
 version: 0.1.0
 
 dependencies:
-  - name: core
+  - name: fluentbit-lib
     version: 0.1.0
-    repository: file://../../app/core
+    repository: file://../../fluent/fluentbit/lib
