--- a/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
@@ -1,5 +1,11 @@
-{{- range $name, $secret := .Values.secrets }}
+{{- if .Values.fluentbit.enabled }}
+{{- $secret := dict "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "fluentbit-config" ) }}
 {{- $labels := include "postgres-cluster.labels" $ | fromYaml }}
-{{- $secret = set $secret "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ )  $name ) }}
-{{- include "core.secret" (list $ $labels $secret ) }}
+{{- $secret = set $secret "parsers" .Values.fluentbit.parsers }}
+{{- $secret = set $secret "service" .Values.fluentbit.service }}
+{{- $secret = set $secret "inputs" .Values.fluentbit.inputs }}
+{{- $secret = set $secret "filters" .Values.fluentbit.filters }}
+{{- $secret = set $secret "outputs" .Values.fluentbit.outputs }}
+{{- $secret = set $secret "annotations" .Values.fluentbit.annotations }}
+{{- include "fluentbit.secret" (list $ $labels $secret ) }}
 {{- end }}
