Feature pg logs sidecar (#96)
* add app/core

* add volumeMounts ability

* add secret to pg

* add core to pg

* add f-b sidecar values

* create secret only when f-b enabled

* change secret tmpl name

* test volumes

* helm dep update

* test volume

* fix name

* test fix unmarshaling JSON

* change log_rotation time

* merge f-b sidecar

* set ignore_older: 30m

* change env [] to {}

* fix spaces

* helm dep update

* fix merge sidecars

* test merge sidecar

* merge sidecars

* change secret name

* change secret name

* test instance label

* test io name label

* Revert "test io name label"

This reverts commit 8c27d0b5e583225b0f8e1f6ccf8f97be171088bd.

* change output labels

* update changelog

* enable logging

* update changelog

* change secret tpl file name

* delete spilo-role label

* change log file name. test

* change log file name

* update changelog

* update info

* fix ''

* test change postgres.db location

* test

* Revert "test"

This reverts commit b7b258ea55ccb1e99da9aba89b31c4908f44c377.

* test

* Revert "test"

This reverts commit bdc56e73fea636d75034e3a36c43944b529776d4.

* DO-142: fix patroni restarts

* set BACKUP_NUM_TO_RETAIN = 5

* update changelog

* update changelog

* update info

* Feature fluentbit secret lib (#98)

* add _secret to lib

* change fb secret sorce

* helm dep update

* refactor fluentbit-standalone secret

* add secretTpl

* refactor pg fb secret

* helm dep update

* add secret name

* fix ''

* helm dep update

* add {- -}

* fix name

* fix type to string

* helm dep update

* fix type to string

* helm dep update

* fix secret

* helm dep update

* fix tmpl

* helm dep update

* test delete trim

* helm dep update

* Revert "test delete trim"

This reverts commit 2c157a81ad05268bc1fa5ef874210208b1db3cce.

* test increase nindent

* helm dep update

* fix f-b secret tmpl

* helm dep update

* return config name

* fix name

* set namespace

* helm dep update

* delete if enabled

* fix charts

---------

C

--- a/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
@@ -1,9 +1,11 @@
+{{- $additionalVolumes := include "postgres-cluster.additionalVolumes" . | fromYamlArray}}
+{{- $fluentbitSidecars := include "postgres-cluster.fluentbitSidecars" . | fromYaml}}
 {{- $defaultSidecars := include "postgres-cluster.defaultSidecars" . | fromYaml }}
 {{/*
-If sidecar has the same key as the default sidecar
+If sidecar has the same key as the default sidecar or fluentbit sidecar
 its attrs override the attrs of the default one
 */}}
-{{- $sidecars := merge .Values.sidecars $defaultSidecars }}
+{{- $sidecars := merge .Values.sidecars $defaultSidecars $fluentbitSidecars }}
 {{/*
 We need to use sortAlpha here so that sidecars will appear
 in predictable order. Also sortAlpha cant be used with 'values'
@@ -59,6 +61,10 @@ spec:
   volume:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+  {{- with $additionalVolumes }}
+  additionalVolumes:
+  {{- tpl (toYaml .) $ | nindent 4 }}
+  {{- end }}
   enableShmVolume: {{ .Values.enableShmVolume | default true }}
   {{- with .Values.podAnnotations }}
   podAnnotations:
@@ -96,6 +102,10 @@ spec:
     {{- end }}
     {{- with $sObj.resources }}
     resources:
+    {{- tpl (toYaml .) $ | nindent 6 }}
+    {{- end }}
+    {{- with $sObj.volumeMounts }}
+    volumeMounts:
     {{- tpl (toYaml .) $ | nindent 6 }}
     {{- end }}
     env:
