--- a/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
@@ -3,3 +3,8 @@ appVersion: "1.0"
 description: helm chart for creating postgres clusters using zolando postgres operator
 name: postgres-cluster
 version: 0.1.0
+
+dependencies:
+  - name: fluentbit-lib
+    version: 0.1.0
+    repository: file://../../fluent/fluentbit/lib
