--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -42,6 +42,9 @@ postgres-operator:
     enable_owner_references: true
 
 postgres-pod-envs:
+  #Default value doesn't work
+  #https://github.com/zalando/spilo/blob/4.0-p3/postgres-appliance/scripts/configure_spilo.py#L532
+  BACKUP_NUM_TO_RETAIN: "5"
   #This is needed by default for all wal-e cloned instances
   #Without this wal-e clone will not work due to this
   #https://github.com/zalando/spilo/blob/3.0-p1/postgres-appliance/scripts/restore_command.sh#L39
@@ -105,6 +108,8 @@ postgres-main:
     enabled: true
     prometheusSelector:
       prometheus: main
+  fluentbit:
+    enabled: true
 #######################
 # Configuration example
 # for 2 dbs
