--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -69,3 +69,62 @@ loki:
     enabled: false
   ingress:
     enabled: false
+  write:
+    # -- Resource requests and limits for the write
+    resources:
+      requests:
+        cpu: 200m
+        memory: 650Mi
+      limits:
+        cpu: '3'
+        memory: 4Gi
+  read:
+    # -- Resource requests and limits for the read
+    resources:
+      requests:
+        cpu: 50m
+        memory: 200Mi
+      limits:
+        cpu: '3'
+        memory: 6Gi
+  backend:
+    # -- Resource requests and limits for the backend
+    resources:
+      requests:
+        cpu: 30m
+        memory: 200Mi
+      limits:
+        cpu: '1'
+        memory: 2Gi
+  memcachedExporter:
+    # -- Resource requests and limits for the memcached exporters
+    resources:
+      requests:
+        cpu: 10m
+        memory: 10Mi
+      limits:
+        cpu: 200m
+        memory: 100Mi
+  resultsCache:
+    # -- Amount of memory allocated to results-cache for object storage (in MB).
+    allocatedMemory: 1024
+    # -- Resource requests and limits for the results-cache
+    # By default a safe memory limit will be requested based on allocatedMemory value (floor (* 1.2 allocatedMemory)).
+    resources:
+      requests:
+        cpu: 10m
+        memory: 30Mi
+      limits:
+        cpu: '2'
+        memory: 1229Mi
+  chunksCache:
+    # -- Amount of memory allocated to chunks-cache for object storage (in MB).
+    allocatedMemory: 8192
+    # By default a safe memory limit will be requested based on allocatedMemory value (floor (* 1.2 allocatedMemory)).
+    resources:
+      requests:
+        cpu: 10m
+        memory: 8200Mi
+      limits:
+        cpu: '3'
+        memory: 9830Mi
