--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -367,7 +367,7 @@ prometheus-blackbox-exporter:
           valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
           valid_status_codes: [200]
           method: GET
-          no_follow_redirects: true
+          follow_redirects: false
           fail_if_not_ssl: true
           headers:
             X-Healthcheck-Agent: "blackbox-exporter"
@@ -378,7 +378,7 @@ prometheus-blackbox-exporter:
           valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
           valid_status_codes: [301, 302]
           method: GET
-          no_follow_redirects: true
+          follow_redirects: false
           fail_if_not_ssl: false
           headers:
             X-Healthcheck-Agent: "blackbox-exporter"
@@ -475,11 +475,11 @@ prometheus-main:
 
       resources:
         limits:
-          cpu: 500m
-          memory: 1Gi
+          cpu: 1000m
+          memory: 2Gi
         requests:
           cpu: 50m
-          memory: 300Mi
+          memory: 600Mi
 
       storage:
         volumeClaimTemplate:
