--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -279,5 +279,7 @@ prometheus:
 
     enableAdminAPI: false
 
+    serviceDiscoveryRole: "EndpointSlice"
+
     tsdb:
       outOfOrderTimeWindow: 0s
