add resource endpointslices to ClusterRole

--- a/charts/chart_deps/prometheus/prometheus-operated/templates/clusterrole.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/templates/clusterrole.yaml
@@ -11,6 +11,7 @@ rules:
   - nodes/metrics
   - services
   - endpoints
+  - endpointslices
   - pods
   verbs: ["get", "list", "watch"]
 - apiGroups:
