add endpointslices c-role

--- a/charts/chart_deps/prometheus/prometheus-operated/templates/clusterrole.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/templates/clusterrole.yaml
@@ -11,13 +11,17 @@ rules:
   - nodes/metrics
   - services
   - endpoints
-  - endpointslices
   - pods
   verbs: ["get", "list", "watch"]
 - apiGroups:
   - "networking.k8s.io"
   resources:
   - ingresses
+  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - "discovery.k8s.io"
+  resources:
+  - endpointslices
   verbs: ["get", "list", "watch"]
 - nonResourceURLs: ["/metrics", "/metrics/cadvisor"]
   verbs: ["get"]
