fix default env value

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -50,7 +50,7 @@ job:
   command: []
   args: []
   resources: {}
-  environment: {}
+  environment: []
   environmentFromSecrets: {}
   nodeSelector: {}
   podSecurityContext: {}
