fix default volumes type value

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -23,8 +23,8 @@ fluentbit:
 
   volumeClaimTemplates: {}
 
-  volumes: {}
-  volumeMounts: {}
+  volumes: []
+  volumeMounts: []
 
   env:
     - name: NODE_NAME
