--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -22,8 +22,8 @@ statefulsetEnabled: false
 
 volumeClaimTemplates: {}
 
-volumes: {}
-volumeMounts: {}
+volumes: []
+volumeMounts: []
 persistentVolumeClaimRetentionPolicy: {}
 #  whenDeleted: "Delete"
 #  whenScaled: "Retain"
@@ -76,7 +76,7 @@ pvcs: {}
 
 pvs: {}
 
-environment: {}
+environment: []
 
 initContainers: {}
 
