Feature argocd update (#103)
* update to tmp version

* helm dep update

* update crds

* update chart to 7.9.0

* update chart to 7.9.1

* update argo helm to 8.0.17

* update crds to 3.0.6

* change limits

* use chart 8.1.4

* update crds

* use 8.6.4 chart

* update argocd to latest

* update gha-operator crds

* update info

* test env: {}

* Revert "test env: {}"

This reverts commit 4356b817e41b6e770966cd64eaf284785a3869a3.

* fix default env value

* fix default volumes type value

* update info

* fix types in app/common

* update info

---------

Co-authored-by: St.Dmitry <hector@defigang.dev>

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -22,8 +22,8 @@ statefulsetEnabled: false
 
 volumeClaimTemplates: {}
 
-volumes: {}
-volumeMounts: {}
+volumes: []
+volumeMounts: []
 persistentVolumeClaimRetentionPolicy: {}
 #  whenDeleted: "Delete"
 #  whenScaled: "Retain"
@@ -50,7 +50,7 @@ job:
   command: []
   args: []
   resources: {}
-  environment: {}
+  environment: []
   environmentFromSecrets: {}
   nodeSelector: {}
   podSecurityContext: {}
@@ -76,7 +76,7 @@ pvcs: {}
 
 pvs: {}
 
-environment: {}
+environment: []
 
 initContainers: {}
 
