--- a/crds/fluent-operator/3.5.0.fluentbit.fluent.io_filters.yaml
+++ b/crds/fluent-operator/3.5.0.fluentbit.fluent.io_filters.yaml
@@ -3,23 +3,23 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
-  name: clusterfilters.fluentbit.fluent.io
+    controller-gen.kubebuilder.io/version: v0.18.0
+  name: filters.fluentbit.fluent.io
 spec:
   group: fluentbit.fluent.io
   names:
-    kind: ClusterFilter
-    listKind: ClusterFilterList
-    plural: clusterfilters
+    kind: Filter
+    listKind: FilterList
+    plural: filters
     shortNames:
-    - cfbf
-    singular: clusterfilter
-  scope: Cluster
+    - fbf
+    singular: filter
+  scope: Namespaced
   versions:
   - name: v1alpha2
     schema:
       openAPIV3Schema:
-        description: ClusterFilter defines a cluster-level Filter configuration.
+        description: Filter is the Schema for namespace level filter API
         properties:
           apiVersion:
             description: |-
@@ -39,7 +39,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: Specification of desired Filter configuration.
+            description: FilterSpec defines the desired state of ClusterFilter
             properties:
               filters:
                 description: A set of filter plugins in order.
@@ -85,7 +85,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -131,7 +131,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -291,7 +291,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -396,7 +396,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -434,7 +434,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -454,9 +454,7 @@ spec:
                                 This field is effectively required, but due to backwards compatibility is
                                 allowed to be empty. Instances of this type with an empty value here are
                                 almost certainly wrong.
-                                TODO: Add other useful fields. apiVersion, kind, uid?
                                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                               type: string
                             optional:
                               description: Specify whether the ConfigMap or its key
@@ -559,7 +557,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -682,7 +680,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -722,7 +720,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -762,7 +760,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -799,7 +797,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -837,7 +835,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -875,7 +873,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
@@ -912,7 +910,7 @@ spec:
                         retryLimit:
                           description: 'RetryLimit describes how many times fluent-bit
                             should retry to send data to a specific output. If set
-                            to false fluent-bit will try indefinetly. If set to any
+                            to false fluent-bit will try indefinitely. If set to any
                             integer N>0 it will try at most N+1 times. Leading zeros
                             are not allowed (values such as 007, 0150, 01 do not work).
                             If this property is not defined fluent-bit will use the
