--- a/crds/fluent-operator/3.5.0.fluentbit.fluent.io_parsers.yaml
+++ b/crds/fluent-operator/3.5.0.fluentbit.fluent.io_parsers.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: parsers.fluentbit.fluent.io
 spec:
   group: fluentbit.fluent.io
@@ -74,6 +74,16 @@ spec:
                 type: object
               logfmt:
                 description: Logfmt defines logfmt parser configuration.
+                properties:
+                  timeFormat:
+                    description: Time_Format, eg. %Y-%m-%dT%H:%M:%S %z
+                    type: string
+                  timeKeep:
+                    description: Time_Keep
+                    type: boolean
+                  timeKey:
+                    description: Time_Key
+                    type: string
                 type: object
                 x-kubernetes-validations:
                 - message: logfmt must not be null
