--- a/crds/fluent-operator/3.5.0.fluentd.fluent.io_clusterinputs.yaml
+++ b/crds/fluent-operator/3.5.0.fluentd.fluent.io_clusterinputs.yaml
@@ -3,23 +3,23 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
-  name: inputs.fluentd.fluent.io
+    controller-gen.kubebuilder.io/version: v0.18.0
+  name: clusterinputs.fluentd.fluent.io
 spec:
   group: fluentd.fluent.io
   names:
-    kind: Input
-    listKind: InputList
-    plural: inputs
+    kind: ClusterInput
+    listKind: ClusterInputList
+    plural: clusterinputs
     shortNames:
-    - fdi
-    singular: input
-  scope: Namespaced
+    - cfdi
+    singular: clusterinput
+  scope: Cluster
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Input is the Schema for the inputs API
+        description: ClusterInput is the Schema for the clusterinputs API
         properties:
           apiVersion:
             description: |-
@@ -39,7 +39,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: InputSpec defines the desired state of Input
+            description: ClusterInputSpec defines the desired state of ClusterInput
             properties:
               inputs:
                 items:
@@ -149,9 +149,7 @@ spec:
                                                 This field is effectively required, but due to backwards compatibility is
                                                 allowed to be empty. Instances of this type with an empty value here are
                                                 almost certainly wrong.
-                                                TODO: Add other useful fields. apiVersion, kind, uid?
                                                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                                TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                                               type: string
                                             optional:
                                               description: Specify whether the Secret
@@ -186,9 +184,7 @@ spec:
                                                 This field is effectively required, but due to backwards compatibility is
                                                 allowed to be empty. Instances of this type with an empty value here are
                                                 almost certainly wrong.
-                                                TODO: Add other useful fields. apiVersion, kind, uid?
                                                 More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                                TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                                               type: string
                                             optional:
                                               description: Specify whether the Secret
@@ -253,7 +249,7 @@ spec:
                             privateKeyPath:
                               type: string
                             protocol:
-                              description: 'The protocal name of this plugin, i.e:
+                              description: 'The protocol name of this plugin, i.e:
                                 tls'
                               type: string
                             version:
@@ -284,9 +280,7 @@ spec:
                                             This field is effectively required, but due to backwards compatibility is
                                             allowed to be empty. Instances of this type with an empty value here are
                                             almost certainly wrong.
-                                            TODO: Add other useful fields. apiVersion, kind, uid?
                                             More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                            TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                                           type: string
                                         optional:
                                           description: Specify whether the Secret
@@ -320,9 +314,7 @@ spec:
                                             This field is effectively required, but due to backwards compatibility is
                                             allowed to be empty. Instances of this type with an empty value here are
                                             almost certainly wrong.
-                                            TODO: Add other useful fields. apiVersion, kind, uid?
                                             More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                            TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
                                           type: string
                                         optional:
                                           description: Specify whether the Secret
@@ -533,7 +525,7 @@ spec:
                             privateKeyPath:
                               type: string
                             protocol:
-                              description: 'The protocal name of this plugin, i.e:
+                              description: 'The protocol name of this plugin, i.e:
                                 tls'
                               type: string
                             version:
@@ -904,7 +896,7 @@ spec:
                 type: array
             type: object
           status:
-            description: InputStatus defines the observed state of Input
+            description: ClusterInputStatus defines the observed state of ClusterInput
             type: object
         type: object
     served: true
