--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -228,7 +228,7 @@ kube-state-metrics:
     - cronjobs
     - daemonsets
     - deployments
-    # - endpoints
+    # - endpointslices
     # - horizontalpodautoscalers
     # - ingresses
     # - jobs
@@ -323,6 +323,9 @@ operator:
 
   prometheusOperator:
     enabled: false
+    # use old thanos image https://github.com/thanos-io/thanos/issues/8549
+    thanosImage:
+      tag: v0.39.2
     ## Create Endpoints objects for kubelet targets.
     #### we will turn this off in the next release ###
     kubeletEndpointsEnabled: true
