--- a/charts/gha-runner/values.yaml
+++ b/charts/gha-runner/values.yaml
@@ -54,7 +54,7 @@ workflowConfigMap:
   enabled: false
   name: workflow-pod
   metaAnnotations:
-    argocd.argoproj.io/instance: "{{ .Release.Name }}"
+    argocd.argoproj.io/tracking-id: "{{ .Release.Name }}:/Pod:{{ .Release.Namespace }}/workflow-pod" 
   spec:
     securityContext:
       fsGroup: 1001
