--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -617,17 +617,17 @@ prometheus-rules:
             enabled: false
             for: "15m"
             description: "daemonset '{{ $labels.daemonset }}' in '{{ $labels.namespace }}' not ready in 15m"
-            expr: (kube_daemonset_status_desired_number_scheduled != kube_daemonset_status_number_available) * on (namespace, daemonset) group_left (label_app_kubernetes_io_name) kube_daemonset_labels
+            expr: (kube_daemonset_status_desired_number_scheduled != kube_daemonset_status_number_available) * on (instance, namespace, daemonset) group_left (label_app_kubernetes_io_name) kube_daemonset_labels
           Pod_replicas_not_ready:
             enabled: false
             for: "15m"
             description: "Pods replicas less than specified for '{{ $labels.deployment }}' in '{{ $labels.namespace }}' for > 15m"
-            expr: (kube_deployment_spec_replicas != kube_deployment_status_replicas_available) * on (namespace, deployment) group_left (label_app_kubernetes_io_name) kube_deployment_labels
+            expr: (kube_deployment_spec_replicas != kube_deployment_status_replicas_available) * on (instance, namespace, deployment) group_left (label_app_kubernetes_io_name) kube_deployment_labels
           Pods_waiting_state:
             enabled: false
             for: "20m"
             description: "Container '{{ $labels.container }}' in '{{ $labels.pod }}' in namespace '{{ $labels.namespace }}' waiting with reason '{{ $labels.reason }}' for >20 minutes"
-            expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{namespace!="kube-system", reason!="OOMKilled"}) * on (namespace, pod) group_left (label_app_kubernetes_io_name) kube_pod_labels > 0
+            expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{namespace!="kube-system", reason!="OOMKilled"}) * on (instance, namespace, pod, uid) group_left (label_app_kubernetes_io_name) kube_pod_labels > 0
           Pods_waiting_state_kube-system:
             enabled: false
             for: "1h"
@@ -637,7 +637,7 @@ prometheus-rules:
             enabled: false
             for: "15m"
             description: "StatefulSet '{{ $labels.statefulset }}' in namespace '{{ $labels.namespace }}' has not matched the expected number of replicas for >15 minutes"
-            expr: (kube_statefulset_status_replicas_ready != kube_statefulset_status_replicas) * on (instance, namespace,statefulset) group_left (label_app_kubernetes_io_name) kube_statefulset_labels
+            expr: (kube_statefulset_status_replicas_ready != kube_statefulset_status_replicas) * on (instance, namespace, statefulset) group_left (label_app_kubernetes_io_name) kube_statefulset_labels
 
           # Kong (nginx)
           ErrorRateIncreasedFor_5XX:
@@ -688,7 +688,7 @@ prometheus-rules:
             enabled: false
             for: "0m"
             description: "Container '{{ $labels.container }}' in pod '{{ $labels.pod }}' located in namespace '{{ $labels.namespace }}' (node '{{ $labels.node }}') was killed by OOM killer"
-            expr: ((increase(kube_pod_container_status_restarts_total[10m]) > 0) and ignoring (reason) kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}) * on (pod) group_left (node) kube_pod_info > 0
+            expr: ((increase(kube_pod_container_status_restarts_total[10m]) > 0) and ignoring (reason) kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}) * on (pod, uid) group_left (node) kube_pod_info > 0
           PVC_low_capacity:
             enabled: false
             for: "15m"
@@ -729,8 +729,8 @@ prometheus-rules:
             enabled: false
             for: "10m"
             keep_firing_for: "12m"
-            description: "Container '{{ $labels.container }}' in pod '{{ $labels.pod }}' located in namespace '{{ $labels.namespace }}' too many restarts (>10 for 10m)"
-            expr: increase(kube_pod_container_status_restarts_total{namespace!="kube-system"}[5m]) * on (instance, namespace, pod, uid) group_left (label_app_kubernetes_io_name) kube_pod_labels > 10
+            description: "Container '{{ $labels.container }}' in pod '{{ $labels.pod }}' located in namespace '{{ $labels.namespace }}' too many restarts (>5 for 10m)"
+            expr: increase(kube_pod_container_status_restarts_total{namespace!="kube-system"}[10m]) * on (instance, label_redisfailovers_role, label_spilo_role, namespace, pod, uid) group_left (label_app_kubernetes_io_name) kube_pod_labels > 5
 
           # GCP
           To_many_gcp_logs:
@@ -745,7 +745,7 @@ prometheus-rules:
             enabled: false
             for: "2h"
             description: "Cronjob '{{ $labels.cronjob }}' failed"
-            expr: ((kube_cronjob_next_schedule_time - on(instance, job, cronjob, namespace) kube_cronjob_status_last_successful_time)/3600) > 25
+            expr: ((kube_cronjob_next_schedule_time - on (instance, job, cronjob, namespace) kube_cronjob_status_last_successful_time)/3600) > 25
 
           # Redis
           Redis_disconnected_slaves:
