enable serviceMonitor in fluentbit-gcp

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -114,13 +114,14 @@ fluentbit:
 
   serviceMonitor:
     enabled: false
-    prometheusSelector:
+    prometheusSelector: {}
   #    prometheus: test
-    labels:
-    targetLabels:
+    labels: {}
+    targetLabels: []
     endpoints:
       - targetPort: 9355
         path: /metrics
+
   ingress:
     enabled: false
     name: '{{ include "fluentbit.fullname" . }}'
