--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/Chart.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/Chart.yaml
@@ -11,3 +11,6 @@ dependencies:
   - name: core
     version: 0.1.0
     repository: file://../../../app/core
+  - name: prometheus-lib
+    version: 0.1.0
+    repository: file://../../../prometheus/lib
