use correct metrics path

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -119,7 +119,7 @@ fluentbit:
     targetLabels: []
     endpoints:
       - targetPort: 2020
-        path: /metrics
+        path: /api/v2/metrics/prometheus
 
   ingress:
     enabled: false
