--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -118,7 +118,7 @@ fluentbit:
     labels: {}
     targetLabels: []
     endpoints:
-      - targetPort: 2020
+      - port: metrics
         path: /api/v2/metrics/prometheus
 
   ingress:
