mv service:enabled from charts_deps

--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -439,6 +439,9 @@ fluentbit-gcp:
       enabled: true
       prometheusSelector:
         prometheus: main
+    service:
+      enabled: true
+
 
 operator:
   enabled: false
