--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -7,6 +7,10 @@ fluentbit:
   enabled: false
   labels:
     fluentbit: "main"
+  serviceMonitor:
+    enabled: true
+    prometheusSelector:
+      prometheus: main
   clusterInputs:
     systemd:
       systemd:
