get metrics from pg fluentbit

--- a/charts/chart_deps/postgres/postgres-cluster/templates/podmonitor.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/podmonitor.yaml
@@ -1,9 +1,11 @@
 {{- $defaultPodMetricsEndpoints := include "postgres-cluster.defaultPodMetricsEndpoints" . | fromYaml }}
+{{- $fluentbitPodMetricsEndpoints := include "postgres-cluster.fluentbitPodMetricsEndpoints" . | fromYaml }}
 {{/*
 If podMetricsEndpoint has the same key as default podMetricsEndpoint
 its attrs override the attrs of default one
 */}}
-{{- $podMetricsEndpoints := merge .Values.podMonitor.podMetricsEndpoints $defaultPodMetricsEndpoints }}
+{{- $podMetricsEndpointsNoFlunt := merge .Values.podMonitor.podMetricsEndpoints $defaultPodMetricsEndpoints }}
+{{- $podMetricsEndpoints := merge $podMetricsEndpointsNoFlunt $fluentbitPodMetricsEndpoints }}
 {{/*
 We need to use sortAlpha here so that podMetricsEndpoints will appear
 in predictable order. Also sortAlpha cant be used with 'values'
