--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -651,7 +651,7 @@ prometheus-rules:
             enabled: false
             for: 10m
             description: "Fluent-bit pod '{{ $labels.pod }}' has not processed any output bytes for > 10 minutes"
-            expr: sum by (pod) (rate(fluentbit_output_proc_bytes_total{service!~".*-fluentbit-gcp$"}[10m])) == 0
+            expr: sum by (pod) (rate(fluentbit_output_proc_bytes_total{service!~".*-fluentbit-(gcp|yc|aws)$"}[10m])) == 0
 
           Fluentbit_cloud_no_output_bytes_processed:
             enabled: false
